<resources>
    <string name="app_name">Calculator</string>

    <string name="main_activity_hint">Введите выражение</string>

    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_0">0</string>
    <string name="button_00">00</string>
    <string name="button_sum">+</string>
    <string name="button_div">/</string>
    <string name="button_mul">*</string>
    <string name="button_sub">-</string>
    <string name="button_eq">=</string>
    <string name="button_dot">.</string>
    <string name="button_C">C</string>
    <string name="parentheses_open">(</string>
    <string name="parentheses_close">)</string>

    <string name="error_message">Ошибка! Проверьте правильность ввода данных.</string>

</resources>
